feat: Introduce local `yogume.png` asset and apply responsive styling to the hero section.

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                 </article>
                 <article class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="https://www.yogakokxd.web.id/img/yogume.png" alt="Yogume">
+                        <img src="yogume.png" alt="Yogume">
                         <div class="project-overlay">
                             <a href="https://yogume.vercel.app/" class="project-btn">
                                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
