--- a/index.html
+++ b/index.html
@@ -529,6 +529,16 @@
                             class="certificate-link">Lihat Kredensial</a>
                     </div>
                 </div>
+                <div class="certificate-card">
+                    <div class="certificate-image">
+                        <img src="PiagLKS (41).jpg" alt="Piagam LKS Kota Surabaya">
+                    </div>
+                    <div class="certificate-info">
+                        <h3 class="certificate-title">Juara Harapan 1 – LKS Web Technologies</h3>
+                        <p class="certificate-issuer">Lomba Kompetensi Siswa (LKS) Tingkat Kota Surabaya</p>
+                        <p class="certificate-date">2026</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
